# sns-voice-agent-elevenlabs

./: .env.example  .gcloudignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
docs/: ARCHITECTURE.md  ELEVENLABS_OPTION_B_PLAN.md  EVALUATION_CASE_STUDY.md  GIT_GUIDE.md  IMPLEMENTED_SOLUTION.md  PLATFORM_NEXT_STEPS.md  ROADMAP.md  THESIS_HARDENING_PLAN.md
docs/elevenlabs/: README.md  agent-config.md  system-prompt.md
docs/elevenlabs/testing/: scenarios.md  test-suite.md
docs/elevenlabs/testing/results/: 2026-07-12_v1_adv_run.json  2026-07-12_v1_hp-1-2-4_run.json  2026-07-12_v1_hp-3-5_run.json  2026-07-12_v2_adv_rerun.json  2026-07-12_v2_hp_rerun.json
docs/elevenlabs/tools/: README.md  clinical-findings.schema.json  red_flag_check.md  triage_set.md
src/triage/: __init__.py  findings.py  redflag.py  set_engine.py  toolserver.py
src/triage/rules/: MAPPING.md  red_flags.yaml  set_mapping.yaml
tests/: test_toolserver.py
